# Logging_System

./: CMakeLists.txt  README.md  main.cpp
include/: inputhandler.h  monitor.h  outputhandler.h  syslog.h
src/: syslog.cpp
